src-tauri/tests/snapshots/wire_format__telemetry_set_enabled_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 242
expression: request_args
---
{
  "enabled": true
}
