src-tauri/tests/snapshots/wire_format__ui_mutation_agent_exited.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "exit_code": 0,
  "kind": "agent_exited",
  "workspace_id": "ws-1"
}
