src-tauri/tests/snapshots/wire_format__ui_mutation_agent_started.snap
---
source: tests/wire_format.rs
assertion_line: 854
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "kind": "agent_started",
  "provider": "claude",
  "task_id": "task-1"
}
