src-tauri/tests/snapshots/wire_format__ui_mutation_event_project_created.snap
---
source: tests/wire_format.rs
assertion_line: 165
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "id": "p1",
  "kind": "project_created"
}
