src-tauri/tests/snapshots/wire_format__ui_mutation_event_project_updated.snap
---
source: tests/wire_format.rs
assertion_line: 175
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "id": "p1",
  "kind": "project_updated"
}
