src-tauri/tests/snapshots/wire_format__ui_mutation_event_task_deleted.snap
---
source: tests/wire_format.rs
assertion_line: 332
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "id": "t1",
  "kind": "task_deleted",
  "project_id": "p1"
}
