src-tauri/tests/snapshots/wire_format__ui_mutation_event_task_updated.snap
---
source: tests/wire_format.rs
assertion_line: 319
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "id": "t1",
  "kind": "task_updated",
  "project_id": "p1"
}
